<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">mobPartnerPublisherSDKSample</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_show">Show Interstitial</string>
    <string name="show_banner">Show Banner</string>
    <string name="show_mobstream">Show MobStream</string>
     <string name="mobwidget_show">Show MobWidget</string>    
    <string name="mobpartner">MobPartner</string>
    <string name="PoolID">PoolID: </string>
    <string name="mobWall">MobWall </string>
    <string name="mobSearch">MobSearch </string>
    <string name="demoPool">3809</string>
</resources>