<?xml version="1.0" encoding="utf-8"?>   
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:mobpartner="http://schemas.android.com/apk/lib/com.mobpartner.android.publisher" 
	android:layout_width="fill_parent"
	android:layout_height="match_parent"
	android:fillViewport="true"
	android:background="#000000">
        
        <ScrollView      
	    android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#000000">
        
	        <LinearLayout 
	            android:orientation="vertical"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content">		
	            
	            <LinearLayout 
				        android:layout_width="fill_parent"
				        android:layout_height="210dp"
				        android:orientation="vertical">
			        
	                	<com.mobpartner.android.publisher.views.MobPartnerAdBanner
					    android:id="@+id/banner"
					    android:layout_width="match_parent"
					    android:layout_height="wrap_content"/>     
					    
				        <LinearLayout
				            android:id="@+id/mobwidgetlayout"  	
					        android:layout_marginLeft="10dp"
					        android:layout_marginRight="10dp"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:orientation="vertical"/>         
		        
		    	</LinearLayout>
		    		
		        
		        <LinearLayout 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:orientation="horizontal"
			        android:gravity="center_vertical|center_horizontal"
			        android:layout_marginTop="10dp">    
			        
		            <TextView
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:textSize="20sp"
		                android:paddingRight="10dp"
		                android:textColor="#FFFFFF"
		                android:text="@string/PoolID" />
		
		            <EditText
		                android:id="@+id/editText1"
		                android:layout_width="90dp"
		                android:layout_height="wrap_content"
		                android:ems="10"
		                android:text="@string/demoPool"
		                android:textColor="#FFFFFF"
		                android:inputType="number" >
		
		                <requestFocus />
		            </EditText>
		                
		        </LinearLayout>            
		        
		        
		        <LinearLayout 
			        android:layout_width="fill_parent"
			        android:layout_height="wrap_content"
			        android:orientation="vertical"
			        android:gravity="top">
		        
		            <Button
			            android:id="@+id/button0"
			            android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:textSize="18sp"
					    android:textColor="#FFFFFF"
					    android:layout_marginLeft="80dp"
					    android:layout_marginRight="80dp"
					    android:onClick="showMobWidget"
					    android:text="@string/mobwidget_show" />
		            
			        <Button
			            android:id="@+id/button1"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:textSize="18sp"
					    android:textColor="#FFFFFF"
					    android:layout_marginLeft="80dp"
					    android:layout_marginRight="80dp"
					    android:onClick="interstitialShow"
					    android:text="@string/interstitial_show" />         
					    
			     	<Button
			            android:id="@+id/button2"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:textSize="18sp"
					    android:textColor="#FFFFFF"
					    android:layout_marginLeft="80dp"
					    android:layout_marginRight="80dp"
					    android:onClick="showBanner"
					    android:text="@string/show_banner" />     
					    
			     	<Button
			            android:id="@+id/button3"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:textSize="18sp"
					    android:textColor="#FFFFFF"
					    android:layout_marginLeft="80dp"
					    android:layout_marginRight="80dp"
					    android:onClick="showMobStream"
					    android:text="@string/show_mobstream" /> 
					    
			     	<Button
			            android:id="@+id/button4"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:textSize="18sp"
					    android:textColor="#FFFFFF"
					    android:layout_marginLeft="80dp"
					    android:layout_marginRight="80dp"
					    android:onClick="mobwallShow"
					    android:text="@string/mobWall" /> 
					    
			     	<Button
			            android:id="@+id/button5"
					    android:layout_width="fill_parent"
					    android:layout_height="wrap_content"
					    android:textSize="18sp"
					    android:textColor="#FFFFFF"
					    android:layout_marginLeft="80dp"
					    android:layout_marginRight="80dp"
					    android:onClick="mobsearchShow"
					    android:text="@string/mobSearch" /> 
					    
				</LinearLayout>
				    
		        <LinearLayout 
			        android:layout_width="fill_parent"
			        android:layout_height="0dp"
			        android:layout_weight="1"
			        android:orientation="vertical"			 
			        android:layout_marginTop="10dp"   
			        android:gravity="bottom">
			        
					
			        <LinearLayout 
			            android:id="@+id/mobstream_layout"
				        android:layout_width="match_parent"
				        android:layout_height="wrap_content"
				        android:orientation="vertical"  
				        android:gravity="center_horizontal|center_horizontal"
				        android:visibility="gone">
		                
				        <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="match_parent"
			                android:layout_marginTop="10dp"
			                android:layout_marginBottom="5dp"
			                android:textSize="20sp"
			                android:paddingRight="10dp"
			                android:textColor="#FFFFFF"
			                android:text="MobStream - 4x1" />
				        
				        <LinearLayout 
						    android:id="@+id/mobstream1layout"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:orientation="vertical"/>
						    
				       <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="match_parent"
			                android:layout_marginTop="10dp"
			                android:layout_marginBottom="5dp"
			                android:textSize="20sp"
			                android:paddingRight="10dp"
			                android:textColor="#FFFFFF"
			                android:text="MobStream - 4x2" />
						    
				        <LinearLayout 
						    android:id="@+id/mobstream2layout"
					        android:layout_width="match_parent"
					        android:layout_height="wrap_content"
					        android:orientation="vertical"/>   
					         
						    
				        <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="match_parent"
			                android:layout_marginTop="10dp"
			                android:layout_marginBottom="5dp"
			                android:textSize="20sp"
			                android:paddingRight="10dp"
			                android:textColor="#FFFFFF"
			                android:text="MobStream - 4x3" />
				        
				        <com.mobpartner.android.publisher.views.MobPartnerMobStream
						    android:id="@+id/mobstream3"
						    android:layout_width="match_parent"
						    android:layout_height="wrap_content"
						    mobpartner:dimension="4x3"/>  
						    
				        <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="match_parent"
			                android:layout_marginTop="10dp"
			                android:layout_marginBottom="5dp"
			                android:textSize="20sp"
			                android:paddingRight="10dp"
			                android:textColor="#FFFFFF"
			                android:text="MobStream - 2x2" />
						    
				        <com.mobpartner.android.publisher.views.MobPartnerMobStream
				            android:id="@+id/mobstream4"
						    android:layout_width="200dp"
						    android:layout_height="200dp"/> 
						    
				        <TextView
			                android:layout_width="wrap_content"
			                android:layout_height="match_parent"
			                android:layout_marginTop="10dp"
			                android:layout_marginBottom="5dp"
			                android:textSize="20sp"
			                android:paddingRight="10dp"
			                android:textColor="#FFFFFF"
			                android:text="MobStream - 2x3" />
						    
				    	<com.mobpartner.android.publisher.views.MobPartnerMobStream
				    	    android:id="@+id/mobstream5"
				    	    android:layout_marginBottom="15dp"
					        android:layout_width="200dp"
					        android:layout_height="300dp"/>   
	    	
			        </LinearLayout>
		    	</LinearLayout>
	    	
	        </LinearLayout>
    	
        </ScrollView>
            
    </RelativeLayout>
    
